--- a/public/css/style.css
+++ b/public/css/style.css
@@ -135,12 +135,10 @@ h3 { font-size: 1.2rem; color: var(--ink-muted); }
   border: 1px solid var(--card-border);
   border-left: 5px solid var(--btn-primary);
   border-radius: var(--radius);
-  padding: 20px;
+  padding: 10px;
   margin-bottom: 20px;
   box-shadow: var(--shadow-1);
   transition: all .25s ease;
-  margin-left: 12px;
-  margin-right: 12px;
 
 }/* קונטיינר של פריטי מוצרים */
 .items-grid {
@@ -283,7 +281,7 @@ form {
   background: var(--card);
   border: 1px solid var(--card-border);
   border-radius: var(--radius);
-  padding: 24px;
+  padding: 20px;
   margin: 30px auto;
   max-width: 600px;
   box-shadow: var(--shadow-1);
@@ -1153,10 +1151,6 @@ border-radius: 10px;
 color: white;
 transition: 0.3s all;
 }
-.nav-item:hover{
-background-color:#00FFA3;
-
-}
 
 .bottom-nav .nav-item{
   flex:1;text-align:center;color:var(--ink-muted);
@@ -1167,7 +1161,7 @@ background-color:#00FFA3;
 .bottom-nav .nav-item i{font-size:20px;}
 
 /* כל כפתור כשהוא פעיל */
-.bottom-nav .nav-item.active{
+.bottom-nav .nav-item.active:not(#notifToggle){
   background:var(--btn-primary);
   color:#000 !important;
   border-radius:50%;
