--- a/views/admin.html
+++ b/views/admin.html
@@ -344,8 +344,9 @@
   <i class="fa-solid fa-users"></i> משתמשים
 </button> -->
     
-    <button id="side_button" class="gohome" style="margin-top: auto;"><i class="fa-solid fa-right-from-bracket"></i>חזרה לעמוד הראשי</button>
-  </div>
+  <button class="side_button" class="gohome" style="margin-top:auto; margin-bottom: 30px;">
+    <i class="fa-solid fa-right-from-bracket"></i> חזרה לעמוד הראשי
+  </button>  </div>
 
   <div class="main">
     <h1 id="text" >דף מנהל 👨‍💼</h1>
