--- a/views/manager.html
+++ b/views/manager.html
@@ -34,7 +34,7 @@
     }
 
     /* ===== Layout ===== */
-    .sidebar {
+    /* .sidebar {
         position: fixed;
       width: 240px;
       background: #1C1C1C;
@@ -70,7 +70,7 @@
     .sidebar a:hover {
       background: var(--accent-hover);
       color: #000;
-    }
+    } */
 
     .main {
       flex: 1;
@@ -85,7 +85,7 @@
     }
 
     /* ===== Pages ===== */
-    .admin-pages section {
+    /* .admin-pages section {
       display: none;
       background: var(--panel);
       border-radius: var(--radius);
@@ -105,7 +105,7 @@
     @keyframes fadeSlide {
       from { opacity: 0; transform: translateY(20px); }
       to   { opacity: 1; transform: translateY(0); }
-    }
+    } */
 
     /* ===== Cards ===== */
     .shift-card {
@@ -230,9 +230,7 @@
     /* Mobile breakpoint */
     @media (max-width: 768px) {
       .sidebar { display: none;transform: translateX(100%); }
-      .admin-pages section {
-      margin-right: 0;
-    }
+
 
     #text {
       margin-right: 0;
@@ -280,22 +278,7 @@
     margin-left: auto; /* דוחף אותו לצד ימין */
   }
 /* מוחקים את #text { margin-right: 250px; } */
-.floating-home {
-  position: fixed;
-  bottom: 90px;
-  right: 20px;
-  background: var(--accent);
-  color: #000;
-  font-size: 1.2rem;
-  padding: 10px 15px;
-  border-radius: 50%;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.4);
-  z-index: 3000;
-  transition: 0.2s;
-}
-.floating-home:hover {
-  background: var(--accent-hover);
-}
+
 
   /* תמונה */
   .users-table img {
