--- a/views/admin.html
+++ b/views/admin.html
@@ -300,7 +300,9 @@
   </style>
 </head>
 <body>
-<a href="/" class="floating-home"><i class="fa-solid fa-house"></i></a>
+
+<!-- <a href="/" class="floating-home"><i class="fa-solid fa-house"></i></a> -->
+<a class="floating-home" id="burger"><i class="fa-solid fa-bars"></i></a>
 
 <nav class="mobile-nav" id="mobileNav">
   <!-- <button style="display: none;" id="closeNav" class="close-btn">✖</button>  -->
@@ -826,10 +828,10 @@
     <i class="fa-solid fa-truck"></i><span>ספקים</span>
   </a>
   
-<a class="nav-btn nav-item" id="burger">
+<!-- <a class="nav-btn nav-item" id="burger">
   <i class="fa-solid fa-bars"></i>
   <span>עוד</span>
-</a>
+</a> -->
 </nav>
 
   <script src="/js/suppliers.js" defer></script>
