--- a/views/profile.html
+++ b/views/profile.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>פרופיל משתמש</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="/css/profile.css" />
   <link rel="stylesheet" href="/css/style.css">
