--- a/views/unauthorized.html
+++ b/views/unauthorized.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>אין הרשאה</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
    <link rel="icon" href="/icons/icon-512.png" type="image/png">
   <style>
     body {
