--- a/views/admin.html
+++ b/views/admin.html
@@ -177,14 +177,6 @@
       gap: 4px;
       transition: 0.3s;
     }
-
-    .bottom-nav .nav-item.active {
-      color: var(--accent);
-    }
-
-    .bottom-nav i {
-      font-size: 20px;
-    }
 #text{
   margin-right: 250px;
 }
@@ -302,19 +294,15 @@
 <body>
 
 <!-- <a href="/" class="floating-home"><i class="fa-solid fa-house"></i></a> -->
-<a class="floating-home" id="burger"><i class="fa-solid fa-bars"></i></a>
-
-<nav class="mobile-nav" id="mobileNav">
-  <!-- <button style="display: none;" id="closeNav" class="close-btn">✖</button>  -->
-  <ul>
-    <li><a href="/"><span class="icon">🏠</span> דף הבית</a></li>
-    <li><a href="/admin#create"><span class="icon">🗓️</span> יצירת משמרת</a></li>
-    <li><a href="/admin#tasks"><span class="icon">⚒</span> ניהול משימות</a></li>
-
-    <li><a href="/logout"><span class="icon">🚪</span> התנתקות</a></li>
+<div class="fab-container">
+  <button class="fab" id="fabBtn"><i class="fa-solid fa-plus"></i></button>
+  <ul class="fab-menu" id="fabMenu">
+    <li><a href="/"><i>🏠</i><span>דף הבית</span></a></li>
+    <li><a href="/admin#create"><i>🗓️</i><span>יצירת משמרת</span></a></li>
+    <li><a href="/admin#tasks"><i>⚒</i><span>ניהול משימות</span></a></li>
+    <li><a href="/logout"><i>🚪</i><span>התנתקות</span></a></li>
   </ul>
-  <button id="closeNav" class="close-btn">✖</button> 
-</nav>
+</div>
 
 
   <div class="sidebar">
@@ -873,15 +861,9 @@
   <a class="nav-btn nav-item" href="#users" data-page="users">
     <i class="fa-solid fa-users"></i><span>משתמשים</span>
   </a>
-
   <a class="nav-btn nav-item" href="#suppliers" data-page="suppliers">
     <i class="fa-solid fa-truck"></i><span>ספקים</span>
   </a>
-  
-<!-- <a class="nav-btn nav-item" id="burger">
-  <i class="fa-solid fa-bars"></i>
-  <span>עוד</span>
-</a> -->
 </nav>
 
   <script src="/js/suppliers.js" defer></script>
