--- a/views/admin.html
+++ b/views/admin.html
@@ -322,7 +322,7 @@
   </button>  </div>
 
   <div class="main">
-    <h1 id="text" >דף מנהל 👨‍💼</h1>
+    <h1 id="text" >עמוד מנהל 👨‍💼</h1>
 
     <div class="admin-pages">
       <section id="page-shifts" class="active">
