--- a/views/manager.html
+++ b/views/manager.html
@@ -333,7 +333,7 @@
 
 
 <div class="admin-pages">
-    <h1 id="text" >דף מנהל 👨‍💼</h1>
+    <h1 id="text" >עמוד אחמ"ש 👷‍♂️</h1>
     <div class="admin-pages">
 
 <section id="page-dispersals" class="manager-dispersals">
