--- a/views/manager.html
+++ b/views/manager.html
@@ -594,7 +594,7 @@
 <script src="/js/manage.js" defer></script>
 </section>
 
-
+</div>
 
 <nav class="bottom-nav">
   <a class="nav-btn nav-item" href="#dispersals" data-page="dispersals">
@@ -611,10 +611,6 @@
     <i class="fa-solid fa-truck"></i><span>הזמנות</span>
   </a>
   
-<!-- <a class="nav-btn nav-item" id="burger">
-  <i class="fa-solid fa-bars"></i>
-  <span>עוד</span>
-</a> -->
 </nav>
 
   <script defer src="/js/global.js"></script>
