--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1277,25 +1277,20 @@ body.light {
     
 .bottom-nav {
   position: fixed;
+  bottom: 0;
   left: 0;
   right: 0;
-  bottom: 0;
   height: 65px;
   background: #111;
   display: flex;
   justify-content: space-around;
-      text-decoration: none;
-      gap: 4px;
-  padding: 10px;
   align-items: center;
   box-shadow: 0 -4px 16px rgba(0,0,0,.5);
   border-top: 1px solid var(--card-border);
-  z-index: 9500;
-      transition: 0.3s;
-
-  /* מכבד safe-area של אייפון */
-  padding-bottom: env(safe-area-inset-bottom);
+  z-index: 9999;
+  padding: 10px env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 }
+
 /* FAB */
 .fab-container {
   position: fixed;
